# CmakeCpp-Learning

./: .gitignore  CMakeLists.txt  HighlighterConfig.h.in  build.sh  cmakeCommand.txt  configure.sh  main.cpp  readme.md  run.sh
Adder/: CMakeLists.txt  add.cpp
